syntax = "proto3";

option go_package= "github.com/Gergenus/commerce/product-service/proto";

package proto;

service availablilityService {
  rpc isAvailable(availablilityRequest) returns (availablilityResponse) {}
}

service OrderService {
  rpc ReserveOrder(ReserveOrderRequest) returns (ReserveOrderResponse) {} // from order service
}

message availablilityRequest {
  string product_id = 1;
  int64 stock = 2;
}

message availablilityResponse {
  bool availablility = 1;
}

// divide

message ReserveOrderRequest {
  repeated orderProduct orderProducts = 1;
}

message orderProduct {
  int64 product_id = 1;
  int64 stock = 2;
}

message ReserveOrderResponse {
  bool isReserved = 1;
  float price = 2;
  repeated productSeller productsSeller = 3;
}

message productSeller {
  int64 product_id = 1;
  int64 stock = 2;
  string seller_id = 3;
}